# geo-audit

./: .gitignore  README.md  pyproject.toml
src/geo_audit/: __init__.py  auditor.py  cli.py  models.py
src/geo_audit/checks/: __init__.py  content_structure.py  llms_txt.py  meta_tags.py  structured_data.py  technical.py
src/geo_audit/generators/: __init__.py  llms_txt.py  schema.py
src/geo_audit/tester/: __init__.py  prompts.py  providers.py  runner.py
