[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "geo-audit"
version = "0.1.0"
description = "Instant GEO (Generative Engine Optimization) audit for any website"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Hui", email = "hui@example.com" }
]
keywords = ["geo", "seo", "llm", "ai", "audit", "optimization"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
]
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "httpx>=0.25",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "rich>=13.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.1",
    "mypy>=1.0",
]

[project.scripts]
geo-audit = "geo_audit.cli:main"

[project.urls]
Homepage = "https://github.com/huiren/geo-audit"
Repository = "https://github.com/huiren/geo-audit"
Issues = "https://github.com/huiren/geo-audit/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/geo_audit"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true
